Add introduction and define structure for the thesis

--- a/SeminarThesis/references.bib
+++ b/SeminarThesis/references.bib
@@ -1,101 +1,183 @@
-@article{akyildiz2002survey,
-	author = {Akyildiz, Ian F. and Su, Weilian and Sankarasubramaniam, Yogesh and Cayirci, Erdal},
-	title = {{A Survey on Sensor Networks}},
-	abstract = {Recent advancement in wireless communications and electronics has enabled the development of low-cost sensor networks. The sensor networks can be used for various application areas (e.g., health, military, home). For different application areas, there are different technical issues that researchers are currently resolving. The current state of the art of sensor networks is captured in this article, where solutions are discussed under their related protocol stack layer sections. This article also points out the open research issues and intends to spark new interests and developments in this field.},
-	doi = {10.1109/MCOM.2002.1024422},
-	i7index = {fd:7-7},
-	journal = {IEEE Communications Magazine},
-	month = Aug,
-	number = {8},
-	pages = {102-114},
-	publisher = {IEEE},
-	volume = {40},
-	year = {2002},
+@INPROCEEDINGS{6256251,
+author={S. Vodopivec and J. Bešter and A. Kos},
+booktitle={2012 35th International Conference on Telecommunications and Signal Processing (TSP)},
+title={A survey on clustering algorithms for vehicular ad-hoc networks},
+year={2012},
+volume={},
+number={},
+pages={52-56},
+abstract={In the past few years we are witnessing increased interest in the research of inter-vehicle communications. Due to vehicle specific movement patterns new algorithms and solutions have to be developed. Clustering is a technique for grouping nodes in geographical vicinity together, making the network more robust and scalable. This article presents an overview of proposed clustering algorithms for use in vehicular ad-hoc network (VANET). We survey different clustering algorithms and highlight their objectives, features, specialties and possible limitations. Varieties of different approaches have been observed whereby typically each one focuses on different performance metric. Diverse are also complexities of algorithms and the input data they use and relay on. With this article, readers can have a more thorough and delicate understanding of ad hoc clustering and the research trends in this area. The most promising solutions show the significance of reused concepts from the field of social network analysis.},
+keywords={pattern clustering;vehicular ad hoc networks;VANET;clustering algorithms;grouping nodes;intervehicle communications;social network analysis;vehicular ad-hoc networks;Ad hoc networks;Algorithm design and analysis;Clustering algorithms;Global Positioning System;IEEE Xplore;Measurement;Vehicles;VANET;ad-hoc networking;clustering;mobile;vehicular},
+doi={10.1109/TSP.2012.6256251},
+ISSN={},
+month={July},}
+
+@article{BALI2014134,
+title = "Clustering in vehicular ad hoc networks: Taxonomy, challenges and solutions",
+journal = "Vehicular Communications",
+volume = "1",
+number = "3",
+pages = "134 - 152",
+year = "2014",
+issn = "2214-2096",
+doi = "https://doi.org/10.1016/j.vehcom.2014.05.004",
+url = "http://www.sciencedirect.com/science/article/pii/S2214209614000217",
+author = "Rasmeet S Bali and Neeraj Kumar and Joel J.P.C. Rodrigues",
+keywords = "Vehicular ad hoc networks, Clustering, Data dissemination, Routing",
+abstract = "Abstract Over the last few years, Vehicular Ad Hoc Networks (VANETs) have emerged as a new class of efficient information dissemination technology among communities of users mainly because of their wide range of applications such as Intelligent Transport Systems (ITS), Safety applications, and entertainment during the mobility of the vehicles. Vehicles in VANETs act as an intelligent machine, which provides various resources to the end users with/without the aid of the existing infrastructure. But due to the high mobility and sparse distribution of the vehicles on the road, it is a challenging task to route the messages to their final destination in VANETs. To address this issue, clustering has been widely used in various existing proposals in literature. Clustering is a mechanism of grouping of vehicles based upon some predefined metrics such as density, velocity, and geographical locations of the vehicles. Motivated from these factors, in this paper, we have analyzed various challenges and existing solutions used for clustering in VANETs. Our contributions in this paper are summarized as follows: Firstly, a complete taxonomy on clustering in VANETs has been provided based upon various parameters. Based upon this categorization, a detailed discussion is provided for each category of clustering which includes challenges, existing solutions and future directions. Finally, a comprehensive analysis of all the existing proposals in literature is provided with respect to number of parameters such as topology selected, additional infrastructure requirements, road scenario, node mobility, data handled, and relative direction, density of the nodes, relative speed, communication mode, and communication overhead. The analysis provided for various existing proposals allows different users working in this domain to select one of the proposals with respect to its merits over the others."
 }
 
-@inproceedings{arampatzis2005survey,
-	author = {Arampatzis, Th. and Lygeros, John and Manesis, Stamatis},
-	title = {{A Survey of Applications of Wireless Sensors and Wireless Sensor Networks}},
-	booktitle = {13th Mediterrean Conference on Control and Automation},
-	abstract = {Wireless sensors and wireless sensor networks have come to the forefront of the scientific community recently. This is the consequence of engineering increasingly smaller sized devices, which enable many applications. The use of these sensors and the possibility of organizing them into networks have revealed many research issues and have highlighted new ways to cope with certain problems. In this paper, different applications areas where the use of such sensor networks has been proposed are surveyed.},
-	address = {Limassol, Cyprus},
-	doi = {10.1109/.2005.1467103},
-	isbn = {0-7803-8937-9},
-	month = Jun,
-	pages = {719- 724},
-	year = {2005},
+@article{ARKIAN2014197,
+title = "Cluster-based traffic information generalization in Vehicular Ad-hoc Networks",
+journal = "Vehicular Communications",
+volume = "1",
+number = "4",
+pages = "197 - 207",
+year = "2014",
+issn = "2214-2096",
+doi = "https://doi.org/10.1016/j.vehcom.2014.08.003",
+url = "http://www.sciencedirect.com/science/article/pii/S2214209614000424",
+author = "Hamid Reza Arkian and Reza Ebrahimi Atani and Atefe Pourkhalili and Saman Kamali",
+keywords = "Traffic information systems, CTIS, VANET, Clustering",
+abstract = "Abstract Vehicular Ad-hoc Network (VANET) is an emerging field of wireless networks providing different applications such as traffic information for participant vehicles and related authorities. However, deploying of such applications is mainly depending on the market penetration rate of this technology. In this paper, we propose a new 3-steps approach for estimation of traffic volume in a road segment based on actual volume of wireless-equipped vehicles. For this propose, we first collect the traffic information for different groups of vehicles using a new clustering algorithm. Then, a chaining technique between the clusters transmits this information to a roadside cloud. Finally, we employ a generalization method to extension of the total traffic volume from the collected data. Performance of the proposed approach is evaluated using extensive simulation for different traffic densities, and the stability of the clustering technique and also estimation accuracy of the proposed approach is shown in comparison with state-of-the-art existing schemes."
 }
 
-@article{dietrich2009lifetime,
-	author = {Dietrich, Isabel and Dressler, Falko},
-	title = {{On the Lifetime of Wireless Sensor Networks}},
-	abstract = {Network lifetime has become the key characteristic for evaluating sensor networks in an application specific way. Especially the availability of nodes, the sensor coverage, and the connectivity have been included in discussions on network lifetime. Even quality of service measures can be reduced to lifetime considerations. A great number of algorithms and methods were proposed to increase the lifetime of a sensor network - while their evaluations were always based on a particular definition of network lifetime. Motivated by the great differences in existing definitions of sensor network lifetime that are used in relevant publications, we reviewed the state of the art in lifetime definitions, their differences, advantages, and limitations. This survey was the starting point for our work towards a generic definition of sensor network lifetime for use in analytic evaluations as well as in simulation models - focusing on a formal and concise definition of accumulated network lifetime and total network lifetime. Our definition incorporates the components of existing lifetime definitions, and introduces some additional measures. One new concept is the ability to express the service disruption tolerance of a network. Another new concept is the notion of time-integration: in many cases, it is sufficient if a requirement is fulfilled over a certain period of time, instead of at every point in time. In addition, we combine coverage and connectivity to form a single requirement called connected coverage. We show that connected coverage is different from requiring non-combined coverage and connectivity. Finally, our definition also supports the concept of graceful degradation by providing means of estimating the degree of compliance with the application requirements. We demonstrate the applicability of our definition based on the surveyed lifetime definitions as well as using some example scenarios to explain the various aspects influencing sensor network lifetime.},
-	doi = {10.1145/1464420.1464425},
-	i7acmizer = {http://dl.acm.org/authorize?161278},
-	journal = {ACM Transactions on Sensor Networks (TOSN)},
-	month = Feb,
-	number = {1},
-	pages = {1-39},
-	publisher = {ACM},
-	volume = {5},
-	year = {2009},
+@INPROCEEDINGS{6737622,
+author={S. Dietzel and M. Balanici and F. Kargl},
+booktitle={2013 IEEE Vehicular Networking Conference},
+title={Short paper: Towards data-similarity-based clustering for inter-vehicle communication},
+year={2013},
+volume={},
+number={},
+pages={238-241},
+abstract={Many applications of inter-vehicle communication networks (IVC) rely on multi-hop dissemination of information using vehicle-to-vehicle communication. An example are traffic information systems, which aim to provide up-to-date information about traffic jams to drivers. Due to the large amount of information and wide dissemination ranges, naïve protocols fail to scale to multi-hop dissemination. Therefore, a wide range of efficient protocols has been investigated. While clustering protocols are successfully used for similar applications in other domains, such as wireless sensor networks, they have been neglected by IVC research, because they often fail due to high vehicle mobility. In this paper, we present a data-similarity-based approach for clustering in inter-vehicle networks, which is built to work in high mobility settings. In contrast to existing clustering proposals, we explicitly draw from knowledge gained during the development of other multi-hop dissemination mechanisms in general and in-network aggregation in particular. We demonstrate our approach with a clustering protocol proposal and show first evaluation results using theoretical analyses.},
+keywords={information dissemination;pattern clustering;protocols;traffic information systems;vehicular ad hoc networks;wireless sensor networks;IVC;VANET;data-similarity-based clustering protocol;intervehicle communication networks;multihop information dissemination;naive protocols;traffic information systems;traffic jams;vehicle-to-vehicle communication;wireless sensor networks;Clustering algorithms;Conferences;Protocols;Roads;Stability criteria;Vehicles;Wireless sensor networks;IVC;V2V communication;VANET;clustering algorithm;data aggregation;relative velocity},
+doi={10.1109/VNC.2013.6737622},
+ISSN={2157-9857},
+month={Dec},}
+
+@INPROCEEDINGS{6685518,
+author={Y. Kanemaru and S. Matsuura and M. Kakiuchi and S. Noguchi and A. Inomata and K. Fujikawa},
+booktitle={2013 13th International Conference on ITS Telecommunications (ITST)},
+title={Vehicle clustering algorithm for sharing information on traffic congestion},
+year={2013},
+volume={},
+number={},
+pages={38-43},
+abstract={We present a method for clustering vehicles that are in the same congested traffic flow. Our goal is to provide a mechanism for sharing information between vehicles in the same situation to ease traffic congestion in urban areas. Because the most accurate source of information about the congested traffic flow is the vehicle at the head of the traffic flow, it first needs to be identified. To do so, we adapt a clustering algorithm by trajectory abstraction. By grouping the vehicles that have the same or similar trajectory into the same cluster, the vehicle at the tail of the traffic flow can discover the vehicle at the head of the traffic flow. Moreover, we adapt an abstracted trajectory representation to compensate for the error in GPS information. Simulation results show that the proposed algorithm provides a higher rate of correctness than existing commonly used clustering algorithms.},
+keywords={Global Positioning System;intelligent transportation systems;road traffic;GPS information;abstracted trajectory representation;congested traffic flow;information sharing;traffic congestion;trajectory abstraction;urban areas;vehicle clustering;Clustering algorithms;Roads;Routing;Telecommunications;Trajectory;Urban areas;Vehicles},
+doi={10.1109/ITST.2013.6685518},
+ISSN={},
+month={Nov},}
+
+@INPROCEEDINGS{4976256,
+author={S. Kuklinski and G. Wolny},
+booktitle={2009 5th International Conference on Testbeds and Research Infrastructures for the Development of Networks Communities and Workshops},
+title={Density based clustering algorithm for VANETs},
+year={2009},
+volume={},
+number={},
+pages={1-6},
+abstract={In this paper we present a new multilevel clustering algorithm for Vehicular Ad-Hoc Networks (VANET), which we will call the Density Based Clustering (DBC) algorithm. Our solution is focused on the formation of stable, long living clusters for reliable communication. Cluster formation is based on complex clustering metric which takes into account density of connection graph, link quality and traffic conditions. Tests performed in the simulation environment composed from VanetMobiSim and JiST/SWANS have shown that algorithm performs better than the popular classic approach (the Lowest Id algorithm [1]) - the clusters stability is significantly increased.},
+keywords={ad hoc networks;vehicles;VANETs;clustering algorithm;vehicular ad-hoc networks;Ad hoc networks;Change detection algorithms;Clustering algorithms;Performance evaluation;Research and development;Roads;Stability;Telecommunication network reliability;Telecommunication traffic;Topology},
+doi={10.1109/TRIDENTCOM.2009.4976256},
+ISSN={},
+month={April},}
+
+@INPROCEEDINGS{5416361,
+author={N. Maslekar and M. Boussedjra and J. Mouzna and L. Houda},
+booktitle={2009 IEEE Vehicular Networking Conference (VNC)},
+title={Direction based clustering algorithm for data dissemination in vehicular networks},
+year={2009},
+volume={},
+number={},
+pages={1-6},
+abstract={Vehicular ad hoc networks (VANETs) are important component for the development of Intelligent Transportation System. Due to the features of VANET, data dissemination is an important issue that has to be addressed. In this paper we propose a direction based clustering algorithm for data dissemination. This protocol is used to estimate the density of vehicles on a given road. As in any clustering algorithm, the formation of the cluster and the use of the bandwidth are important tasks. In the proposed solution the packet is forwarded to vehicles only if they are moving along the same direction. The simulations show that the proposed protocol reduces the number of broadcast packets being sent on the network. To choose the best technology for VANET applications, the technologies 802.11p and 802.11b are compared with TCP/IP and Wireless Access Vehicular Environment (WAVE) stack protocols. This results obtained shows that WAVE stack is better than TCP/IP stack, in terms of performance, in vehicular environment.},
+keywords={ad hoc networks;data handling;mobile communication;transport protocols;TCP/IP;ad hoc networks;data dissemination;direction based clustering algorithm;intelligent transportation system;vehicular networks;wireless access vehicular environment stack protocols;Access protocols;Ad hoc networks;Bandwidth;Broadcasting;Clustering algorithms;Intelligent networks;Intelligent transportation systems;Intelligent vehicles;Road vehicles;TCPIP},
+doi={10.1109/VNC.2009.5416361},
+ISSN={2157-9857},
+month={Oct},}
+
+@INPROCEEDINGS{5735785,
+author={S. A. Mohammad and C. W. Michele},
+booktitle={IEEE Local Computer Network Conference},
+title={Using traffic flow for cluster formation in vehicular ad-hoc networks},
+year={2010},
+volume={},
+number={},
+pages={631-636},
+abstract={We present a lane-based clustering algorithm designed to provide stability in cluster lifetime for vehicular ad-hoc networks (VANETs) in urban scenarios. Stable clustering methods reduce the overhead of re-clustering and lead to an efficient hierarchical network topology. During the creation of VANET clusters, cluster members select one member to be the clusterhead. Fewer clusterhead changes result in a more stable cluster. To achieve this goal, cluster members must select a member that has the potential to be a clusterhead longer than other cluster members. Our method aims to select a clusterhead based on the lane where most of the traffic will flow.},
+keywords={traffic engineering computing;vehicular ad hoc networks;VANET;cluster formation;hierarchical network topology;lane-based clustering algorithm;traffic flow;vehicular ad-hoc networks;Ad hoc networks;Clustering algorithms;Global Positioning System;Mobile computing;Relays;Roads;Vehicles},
+doi={10.1109/LCN.2010.5735785},
+ISSN={0742-1303},
+month={Oct},}
+
+@INPROCEEDINGS{6077004,
+author={M. M. C. Morales and C. S. Hong and Y. C. Bang},
+booktitle={2011 13th Asia-Pacific Network Operations and Management Symposium},
+title={An Adaptable Mobility-Aware Clustering Algorithm in vehicular networks},
+year={2011},
+volume={},
+number={},
+pages={1-6},
+abstract={The forthcoming Intelligent Transportation System aims to achieve safety and productivity in transportation using vehicular ad hoc networks (VANETs) to support the communications system required. Currently, some clustering approaches have been proposed to improve the performance of VANETs due to their dynamic nature, high scalability and load balancing results. However, the host mobility and the constantly topology change continue to be main problems of this technique due to the lack of models which represent the vehicular behavior and the group mobility patterns. Therefore, we propose an Adaptable Mobility-Aware Clustering Algorithm based on Destination positions (AMACAD) to accurately follow the mobility pattern of the network prolonging the cluster lifetime and reducing the global overhead. In an effort to show the efficiency of AMACAD, a set of simulation was executed. The obtained results reveal an outstanding performance in terms of the lifetime of the cluster heads, lifetime of the members and the re-affiliation rate under varying speeds and transmission ranges.},
+keywords={mobility management (mobile radio);vehicular ad hoc networks;adaptable mobility aware clustering algorithm;destination positions;forthcoming intelligent transportation;vehicular ad hoc networks;vehicular networks;Algorithm design and analysis;Bandwidth;Clustering algorithms;Mobile communication;Proposals;Roads;Vehicles;Clustering Algorithm;Destination-Based;Intelligent Transportation System ITS;Mobility Aware;VANET;Vehicular Networks},
+doi={10.1109/APNOMS.2011.6077004},
+ISSN={},
+month={Sept},}
+
+@INPROCEEDINGS{6379136,
+author={L. A. Maglaras and D. Katsaros},
+booktitle={2012 IEEE 8th International Conference on Wireless and Mobile Computing, Networking and Communications (WiMob)},
+title={Distributed clustering in vehicular networks},
+year={2012},
+volume={},
+number={},
+pages={593-599},
+abstract={Clustering in vanets is of crucial importance in order to cope with the dynamic features of the vehicular topologies. Algorithms that give good results in Manets fail to create stable clusters since vehicular nodes are characterized by their high mobility and the different mobility patterns that even nodes in proximity may follow. In this paper, we propose a distributed clustering algorithm which forms stable clusters based on force directed algorithms. The simulation results show that our Spring-Clustering (Sp-Cl) scheme has stable performance in randomly generated scenarios on a highway. It forms lesser clusters than Lowest-ID and it is better in terms of Cluster stability compared to Lowest-ID and LPG algorithms in the same scenarios.},
+keywords={distributed algorithms;pattern clustering;telecommunication network topology;vehicular ad hoc networks;LPG algorithms;MANET;Sp-Cl scheme;VANET;cluster stability;distributed clustering algorithm;force directed algorithms;lowest-ID algorithm;mobility patterns;spring-clustering scheme;vehicular networks;vehicular topology;Clustering algorithms;Force;Heuristic algorithms;Peer to peer computing;Road transportation;Vehicle dynamics;Vehicles},
+doi={10.1109/WiMOB.2012.6379136},
+ISSN={2160-4886},
+month={Oct},}
+
+@article{HASSANABADI2014535,
+title = "Clustering in Vehicular Ad Hoc Networks using Affinity Propagation",
+journal = "Ad Hoc Networks",
+volume = "13",
+pages = "535 - 548",
+year = "2014",
+issn = "1570-8705",
+doi = "https://doi.org/10.1016/j.adhoc.2013.10.005",
+url = "http://www.sciencedirect.com/science/article/pii/S1570870513002278",
+author = "B. Hassanabadi and C. Shea and L. Zhang and S. Valaee",
+keywords = "Ad Hoc Networks, Vehicular networks, Clustering, Affinity Propagation",
+abstract = "Abstract The need for an effective clustering algorithm for Vehicular Ad Hoc Networks (VANETs) is motivated by the recent research in cluster-based MAC and routing schemes. VANETs are highly dynamic and have harsh channel conditions, thus a suitable clustering algorithm must be robust to channel error and must consider node mobility during cluster formation. This work presents a novel, mobility-based clustering scheme for Vehicular Ad hoc Networks, which forms clusters using the Affinity Propagation algorithm in a distributed manner. This proposed algorithm considers node mobility during cluster formation and produces clusters with high stability. Cluster performance was measured in terms of average clusterhead duration, average cluster member duration, average rate of clusterhead change, and average number of clusters. The proposed algorithm is also robust to channel error and exhibits reasonable overhead. Simulation results confirm the superior performance, when compared to other mobility-based clustering techniques."
 }
 
-@inproceedings{khemapach2005survey,
-	author = {Khemapech, Ittipong and Duncan, Ishbel and Miller, Alan},
-	title = {{A Survey of Wireless Sensor Networks Technology}},
-	editor = {Merabti, M. and Pereira, R.},
-	booktitle = {6th Annual PostGraduate Symposium on the Convergence of Telecommunications, Networking and Broadcasting},
-	abstract = {Wireless Sensor Networks were first used in military missions. They are currently deployed in a wide range of civil applications as a sensor is becoming smaller and production costs are smaller. The main drawback is the energy constraint as it seems impractical to change or recharge the battery. Several applications require an end-to-end reliable data transport with congestion control to achieve an intended performance, especially during heavy traffic. This paper provides a survey of wireless sensor networks technology. Several research works including sensor network applications, components, reliable transport protocols, and congestion control schemes are summarised and compared in different sections.},
-	address = {Liverpool, UK},
-	month = Jun,
-	year = {2005},
+@article{sommer2011bidirectionally,
+  author = {Sommer, Christoph and German, Reinhard and Dressler, Falko},
+  title = {{Bidirectionally Coupled Network and Road Traffic Simulation for Improved IVC Analysis}},
+  journal = {IEEE Transactions on Mobile Computing},
+  pages = {3-15},
+  volume = {10},
+  number = {1},
+  year = {2011},
+  month = {January},
+  publisher = {IEEE},
+  doi = {10.1109/TMC.2010.133},
 }
 
-@inproceedings{kumar2005lifetime,
-	author = {Kumar, Santosh and Arora, Anish and Lai, Ten H.},
-	title = {{On the Lifetime Analysis of Always-On Wireless Sensor Network Applications}},
-	booktitle = {IEEE International Conference on Mobile Ad-hoc and Sensor Systems (MASS 2005)},
-	abstract = {Majority of papers in the area of wireless sensor networks (WSNs) have an element of energy-efficiency and associated with it an analysis of network lifetime. Yet, there is no agreement on how to analyze the lifetime of a WSN. As a result, errors are frequently made on both sides. Some underestimate the network lifetime by an order of magnitude, while others end up overestimating the lifetime by a significant factor. This paper presents a first step towards standardizing the lifetime analysis of WSNs. We focus on WSNs deployed for always-on applications, where the problem of power management is most severe because the environment needs to be monitored continuously. Underestimation of network lifetime is common when proposing sleep-wakeup schemes, where it is frequently assumed that in the absence of a sleep-wakeup scheme, a sensor node from the Mica family lasts 3-5 days on a pair of AA batteries. We show that the same sensor node can be made to last more than 36 days, even if it is continuously monitoring the environment. Overestimation typically occurs when proposing non-sleep-wake up power management schemes such as in-network data aggregation. Overestimation occurs because several network activities (e.g periodic routing messages) are assumed to have negligible effect on the network lifetime and therefore are ignored in the lifetime analysis. We use our recent experience in deploying ExScal (a large-scale WSN for intrusion detection) to identify major components in the network lifetime analysis. We then present a careful lifetime analysis of ExScal and show how to analyze the effects of using various non-sleep-wake up power management schemes such as hierarchical sensing, low-power listening, and in-network data aggregation on the network lifetime. Our lifetime analysis will be useful as a template in analyzing the lifetime of other WSNs deployed for always-on applications.},
-	address = {Washington, DC},
-	month = Nov,
-	year = {2005},
-}
-
-@inproceedings{landsiedel2005accurate,
-	author = {Landsiedel, Olaf and Wehrle, Klaus and G{\"{o}}tz, Stefan},
-	title = {{Accurate Prediction of Power Consumption in Sensor Networks}},
-	booktitle = {2nd IEEE Workshop on Embedded Networked Sensors (EmNetS-II)},
-	address = {Sydney, Australia},
-	doi = {10.1109/EMNETS.2005.1469097},
-	i7index = {fd:9-3},
-	month = May,
-	pages = {37-44},
-	publisher = {IEEE},
-	year = {2005},
-}
-
-@inproceedings{shah2002energy,
-	author = {Shah, Rahul C. and Rabaey, Jan M.},
-	title = {{Energy Aware Routing for Low Energy Ad Hoc Sensor Networks}},
-	booktitle = {IEEE Wireless Communications and Networking Conference (WCNC 2002)},
-	abstract = {The recent interest in sensor networks has led to a number of routing schemes that use the limited resources available at sensor nodes more efficiently. These schemes typically try to find the minimum energy path to optimize energy usage at a node. In this paper we take the view that always using lowest energy paths may not be optimal from the point of view of network lifetime and long-term connectivity. To optimize these measures, we propose a new scheme called energy aware routing that uses sub-optimal paths occasionally to provide substantial gains. Simulation results are also presented that show increase in network lifetimes of up to 40% over comparable schemes like directed diffusion routing. Nodes also burn energy in a more equitable way across the network ensuring a more graceful degradation of service with time.},
-	address = {Orlando, FL},
-	i7index = {isa:3-35},
-	month = Mar,
-	year = {2002},
-}
-
-@article{xing2005integrated,
-	author = {Xing, Guoliang and Wang, Xiaorui and Zhang, Yuanfang and Lu, Chenyang and Pless, Robert and Gill, Christopher},
-	title = {{Integrated Coverage and Connectivity Configuration for Energy Conservation in Sensor Networks}},
-	abstract = {An effective approach for energy conservation in wireless sensor networks is scheduling sleep intervals for extraneous nodes while the remaining nodes stay active to provide continuous service. For the sensor network to operate successfully, the active nodes must maintain both sensing coverage and network connectivity. Furthermore, the network must be able to configure itself to any feasible degree of coverage and connectivity in order to support different applications and environments with diverse requirements. This article presents the design and analysis of novel protocols that can dynamically configure a network to achieve guaranteed degrees of coverage and connectivity. This work differs from existing connectivity or coverage maintenance protocols in several key ways. (1) We present a Coverage Configuration Protocol (CCP) that can provide different degrees of coverage requested by applications. This flexibility allows the network to self-configure for a wide range of applications and (possibly dynamic) environments. (2) We provide a geometric analysis of the relationship between coverage and connectivity. This analysis yields key insights for treating coverage and connectivity within a unified framework; in sharp contrast to several existing approaches that address the two problems in isolation. (3) We integrate CCP with SPAN to provide both coverage and connectivity guarantees. (4) We propose a probabilistic coverage model and extend CCP to provide probabilistic coverage guarantees. We demonstrate the capability of our protocols to provide guaranteed coverage and connectivity configurations through both geometric analysis and extensive simulations.},
-	i7index = {fd:9-48},
-	journal = {ACM Transactions on Sensor Networks (TOSN)},
-	month = Aug,
-	number = {1},
-	pages = {36-72},
-	volume = {1},
-	year = {2005},
-}
+@INPROCEEDINGS{6407446,
+author={C. Sommer and S. Joerer and F. Dressler},
+booktitle={2012 IEEE Vehicular Networking Conference (VNC)},
+title={On the applicability of Two-Ray path loss models for vehicular network simulation},
+year={2012},
+volume={},
+number={},
+pages={64-69},
+abstract={We discuss the applicability of simplified Two-Ray Ground path loss models to simulation-based performance evaluation studies of Inter-Vehicle Communication (IVC) protocols. We contrast this with the applicability of a more exact Two-Ray Interference model. A key result is that, in most cases, the commonly used simplified Two-Ray Ground models add no additional value compared to the most simple Free-space model - in particular in highway and suburban environments. We further argue that replacing a simplified with a fully featured Two-Ray Interference model can not only substantially improve the accuracy of simulation results but also allow capturing one notable artifact that becomes immediately visible in field tests, namely strong signal attenuation at short and medium ranges. We implemented the Two-ray Interference model within the Veins simulation framework and validated it using analytical predictions and field measurements. We show the impact of the more accurate Two-Ray Interference model, which only comes with negligible additional computational cost for simulation experiments.},
+keywords={protocols;radiofrequency interference;road traffic;vehicular ad hoc networks;IVC protocol;computational cost;field measurements;free-space model;intervehicle communication protocol;signal attenuation;two-ray ground path loss model;two-ray interference model;vehicular network simulation;Analytical models;Computational modeling;Interference;Mathematical model;Predictive models;Protocols;Receivers},
+doi={10.1109/VNC.2012.6407446},
+ISSN={2157-9857},
+month={Nov},}
 
